:bug: Fixed margin issues.
Menu was off center on small-screen devices.

--- a/beta/beta-styles.css
+++ b/beta/beta-styles.css
@@ -124,6 +124,7 @@ div{
     align-items: center;
     justify-content: center;
     line-height: 3em;
+    margin: 0;
 }
 
 .forwardbox{
